fix jumping bg on ios

--- a/src/styles/common/hero.scss
+++ b/src/styles/common/hero.scss
@@ -8,7 +8,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      height: 100%;
+      height: 100vh;
       width: 100%;
       z-index: -1;
 
@@ -51,7 +51,7 @@
     &__inner {
       padding: 0 25px;
       position: absolute;
-      bottom: 160px;
+      bottom: 180px;
     }
 
     &__text {
